# sica-ictus-core

./: .gitignore  .npmrc  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: package.json  pyproject.toml
apps/web/: package.json
example/: pyproject.toml
workers/runner/: package.json  pyproject.toml
workers/runner/src/: main.py
